# WasmCompiler

./: CMakeLists.txt  README.md
compiler/: CMakeLists.txt
compiler/src/: AST.h  CodeGenWasm.cpp  CodeGenWasm.h  main.cpp
host_shared_lib/: CMakeLists.txt
host_shared_lib/include/host_shared_lib/: functions.h
host_shared_lib/src/: functions.cpp
native_host/: CMakeLists.txt
native_host/src/: main.cpp
web_host/: index.html  server.py
web_host/js/: host_functions_loader.js  main.js
